# TidyTuesday

./: .Rprofile  .gitignore  README.md  _quarto.yml  about.qmd  custom.scss  gallery-custom.css  index.qmd  install_packages.R  main.py  new-viz-from-template.R  new-viz-from-template.sh  pyproject.toml  requirements.txt  rproject.toml  setup-dev.sh  styles-dark.scss  styles.css  styles.scss  template.qmd
.github/workflows/: quarto-publish.yml
2024/: 2024-08-20.R  2024-09-10.R  2024-09-24.R
Python/: 2024-11-05.py  pyproject.toml
R/: 2024-08-20.R  2024-09-24.R  2024-11-19.R  2024-11-26.R
_freeze/gallery/execute-results/: html.json
_freeze/index/execute-results/: html.json
_freeze/python/2024/week_45/week_45/execute-results/: html.json
_freeze/r/2024-08-20/execute-results/: html.json
_freeze/r/2024-09-24/execute-results/: html.json
_freeze/r/2024-11-19/execute-results/: html.json
_freeze/r/2024/week_34/week_34/execute-results/: html.json
_freeze/r/2024/week_39/week_39/execute-results/: html.json
_freeze/r/2024/week_47/week_47/execute-results/: html.json
_freeze/r/2025/week_25/week_25/execute-results/: html.json
_freeze/r/2025/week_39/week_39/execute-results/: html.json
_freeze/r/2025/week_39/week_39_polar/execute-results/: html.json
posts/2024/week_34/: week_34-r.qmd  week_34.qmd
posts/2024/week_39/: week_39-r.qmd  week_39.qmd
posts/2024/week_45/: week_45.qmd
posts/2025/week_25/: week_25-r.qmd  week_25.qmd
posts/2025/week_39/: week_39-r.qmd  week_39.qmd
posts/2025/week_40/: week_40-r.qmd  week_40.qmd
posts/2025/week_41/: week_41-r.qmd  week_41.qmd
posts/2025/week_43/: week_43.qmd
python/2024/week_45/: week_45.qmd  week_45.quarto_ipynb
r/2024/week_34/: week_34.qmd
r/2024/week_39/: week_39.qmd
r/2024/week_47/: week_47.qmd
r/2025/week_25/: week_25.qmd
r/2025/week_39/: week_39.qmd
r/2025/week_40/: week_40.qmd
r/2025/week_41/: IPC_CH_numbers_by_country_14-10-2025.csv  ipc_pse.geojson  week_41.qmd
