[project]
authors = [{name = "gnoblet", email = "gnoblet@zaclys.net"}]
dependencies = []
description = "Add a short description here"
name = "Python"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
python = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipykernel = ">=6.29.5,<7"
python = ">=3.13.0,<3.14"
pandas = ">=2.2.3,<3"
geopandas = ">=1.0.1,<2"
