[project]
name = "tidytuesday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.4.0",
    "beautifulsoup4>=4.12.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "geopandas>=1.0.0",
    "ipykernel>=6.29.0",
    "isort>=5.13.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "notebook>=7.0.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "plotly>=5.17.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "vl-convert-python>=1.8.0",
    "xlsxwriter>=3.1.0",
]
