[project]
authors = [{name = "gnoblet", email = "gnoblet@zaclys.net"}]
dependencies = []
description = "Add a short description here"
name = "Python"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
python = { path = ".", editable = true }

[tool.pixi.tasks]
